fullSandbox11072023/force-app/main/default/objects/Business_Plan_Contacts__c/Business_Plan_Contacts__c.object-meta.xml
<CustomObject>
    <label>Business Plan Contacts</label>
    <nameField>
        <displayFormat>BPC-{0}</displayFormat>
        <label>Business Plan Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plan Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>