fullSandbox11072023/force-app/main/default/objects/Business_Plan_Contacts__c/fields/Business_Plans__c.field-meta.xml
<CustomField>
    <fullName>Business_Plans__c</fullName>
    <label>Business Plans</label>
    <referenceTo>Business_Plans__c</referenceTo>
    <relationshipLabel>Business Plan Contacts</relationshipLabel>
    <relationshipName>Business_Plan_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>