fullSandbox11072023/force-app/main/default/objects/Business_Plan_Contacts__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role 1</fullName>
            </value>
            <value>
                <fullName>Role 2</fullName>
            </value>
            <value>
                <fullName>Role 3</fullName>
            </value>
            <value>
                <fullName>Role 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>